[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromem"
version = "0.1.0"
description = "Neural Memory Management System with belief tracking, contradiction detection, and reasoning traces"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "NeuraMem Team"}
]
keywords = ["memory", "ai", "belief-tracking", "knowledge-graph", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "msgpack>=1.0.0",
    "psutil>=5.9.0",
    "apscheduler>=3.10.0",
    "typer>=0.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]
ollama = ["ollama>=0.1.0"]
langchain = ["langchain>=0.0.280"]

[project.scripts]
neuromem = "neuromem.cli.cli:app"

[project.urls]
Homepage = "https://github.com/Beps108/Neuramem"
Repository = "https://github.com/Beps108/Neuramem.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuromem*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
